--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.css
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.css
@@ -12,4 +12,11 @@
   height: 40px;
   outline: none;
   padding: 20px;
+  float: right;
+}
+.dataTables_wrapper .row p{
+  position: absolute;
+  right: 430px;
+  top: 10px;
+  font-weight: 700;
 }
