--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -18,8 +18,8 @@
                     <div class="box-body">
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                             <div class="row">
-                                <div class="col-sm-6">
-                                    Search : <input [(ngModel)]="term" placeholder="All fields" class="searchbox">
+                                <div class="col-sm-6 pull-right">
+                                  <p>Search :</p> <input [(ngModel)]="term" placeholder="All fields" class="searchbox">
                                 </div>
                             </div>
                             <div class="row">
