--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -70,7 +70,7 @@
                   </div>
                   <div class="col-md-1 createAgentBtn">
                     <div class="form-group">
-                      <button class="btn btn-success" type="button" (click)="CreateAgent(template)" id="createAgent"><i class="fa fa-plus"> </i> Create Agent</button>
+                      <button class="btn btn-warning newbutton" type="button" (click)="CreateAgent(template)" id="createAgent"><i class="fa fa-plus"> </i> Create Agent</button>
                     </div>
                   </div>
                 </div>
