fix design issue

--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -322,7 +322,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="sunTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="sunEndTime.invalid && sunEndTime.touched && sunEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -369,7 +369,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="monTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="monEndTime.invalid && monEndTime.touched && monEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -416,7 +416,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="tueTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="tueEndTime.invalid && tueEndTime.touched && tueEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -465,7 +465,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="wedTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="wedEndTime.invalid && wedEndTime.touched && wedEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -515,7 +515,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="thuTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="thuEndTime.invalid && thuEndTime.touched && thuEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -561,7 +561,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="friTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="friEndTime.invalid && friEndTime.touched && friEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -608,7 +608,7 @@
                                     class="glyphicon glyphicon-time"></i></span>
                                 </div>
                                 <span *ngIf="satTimePikerError"
-                                  class="help-block">End Time Should after Start Time</span>
+                                  class="help-block">End Time Should start after Start Time</span>
                                 <span *ngIf="satEndTime.invalid && satEndTime.touched && satEndTime.errors?.required"
                                   class="help-block">End Time is Required</span>
                               </div>
@@ -653,7 +653,7 @@
                 <!--<input [ngModel]="widget.endTime" name="endTime" #endTime="ngModel" class="form-control"  [required]="'required'" type="text" id="endTime" (ngModelChange)="log2($event)"/>-->
                 <!--<span class="input-group-addon" (click)="openEndTimer()"><i class="glyphicon glyphicon-time"></i></span>-->
                 <!--</div>-->
-                <!--<span *ngIf="timePikerError" class="help-block">End Time Should after Start Time</span>-->
+                <!--<span *ngIf="timePikerError" class="help-block">End Time Should start after Start Time</span>-->
                 <!--<span *ngIf="endTime.invalid && endTime.touched && endTime.errors?.required" class="help-block">End Time is Required</span>-->
 
                 <!--</div>-->
