--- a/src/app/core/layout/inner-pages/chat/pending/pending.component.html
+++ b/src/app/core/layout/inner-pages/chat/pending/pending.component.html
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="!(showChats() | async).length">
-                                    <h4>No new requests at this Moment!</h4>
+                                    <h4>No new requests at this moment!</h4>
                                 </div>
                             </div>
                         </div>
