--- a/src/app/core/layout/inner-pages/twilio/subaccount/subaccount.component.html
+++ b/src/app/core/layout/inner-pages/twilio/subaccount/subaccount.component.html
@@ -11,7 +11,7 @@
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
               <div class="row">
                 <div class="col-sm-12">
-                  <table class="table table-bordered table-hover dataTable"
+                  <table id="twilioSubAcc" class="table table-bordered table-hover dataTable"
                          role="grid" aria-describedby="example2_info">
                     <thead>
                     <tr role="row">
