--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -68,7 +68,7 @@
                 <div class="col-md-6">
                   <div class="row">
                     <div class="col-md-12">
-                      <div class="col-md-9 col-sm-9">
+                      <div class="depaertArea">
                         <div class="form-group">
                           <label class="control-label" for="department">
                             Department for Agent
@@ -85,8 +85,8 @@
                           </angular2-multiselect>
                         </div>
                       </div>
-                      <div class="col-md-3 col-sm-3 createAgentBtn">
-                        <button class="btn btn-warning newbutton" style="margin-top: 25px;" type="button"
+                      <div class="createAgentBtn">
+                        <button class="btn btn-warning btn-md" style="margin-top: 25px;" type="button"
                           (click)="createDepartment(template)" id="createDepartment"><i class="fa fa-plus"></i> Create Department</button>
                       </div>
                     </div>
