--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.css
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.css
@@ -6,3 +6,35 @@
 .filter{
   padding-bottom: 10px;
 }
+
+.filterbox {
+    border-radius: 20px;
+    border-color: #ddd;
+    padding: 5px 20px;
+    width: calc(100% - 65px);
+    outline: none;
+}
+.searchbox {
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 1px solid #3c8dbc;
+    box-shadow: 0px 0px 4px 1px #3c8dbc75;
+    width: calc(100% - 55px);
+    height: 30px;
+    outline: none;
+    padding: 16px;
+}
+.companyArea {
+    padding: 0 15px 20px 15px;
+}
+#agentListTable tr td:last-child{
+    display: block;
+    width: 107px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+#agentListTable tr td:nth-child(n+2){
+    min-width: 145px;
+}
+
