--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -173,7 +173,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="!(showChats() | async).length">
-                                    <h4>No live sessions at this Moment!</h4>
+                                    <h4>No live sessions at this moment!</h4>
                                 </div>
                             </div>
                         </div>
