--- a/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
+++ b/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
@@ -100,7 +100,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="!(showChats() | async).length">
-                                    <h4>No Rejected Chats at this Moment!</h4>
+                                    <h4>No Rejected Chats at this moment!</h4>
                                 </div>
                             </div>
                         </div>
