--- a/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
+++ b/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
@@ -159,7 +159,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="(chatState | async).closedChats.length == 0">
-                                    <h4>No Resolve Chats at this Moment!</h4>
+                                    <h4>No Resolve Chats at this moment!</h4>
                                 </div>
                             </div>
                         </div>
