--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.css
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.css
@@ -1,3 +1,17 @@
+#contactListTable tr td:nth-child(2n){
+    min-width: 122px;
+}
+.searchbox {
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 1px solid #3c8dbc;
+    box-shadow: 0px 0px 4px 1px #3c8dbc75;
+    width: calc(100% - 54px);
+    height: 30px;
+    outline: none;
+    padding: 16px;
+}
+
 @media screen and (max-width:1024px){
     .box{
         overflow-x: scroll;
