--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -16,7 +16,7 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="All keyword"> </div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
+            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6 col-md-4"> Search : <input [(ngModel)]="term" placeholder="All keyword" class="searchbox"> </div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
               <table id="contactListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
