--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.css
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.css
@@ -1,3 +1,23 @@
+#chatList tr td:nth-child(n+2){
+    min-width: 100px;
+}
+#chatList tr td:nth-child(n+5){
+    min-width: 105px;
+}
+#chatList tr td button i{
+    padding-right: 7px;
+}
+.searchbox {
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 1px solid #3c8dbc;
+    box-shadow: 0px 0px 4px 1px #3c8dbc75;
+    width: calc(100% - 54px);
+    height: 30px;
+    outline: none;
+    padding: 16px;
+}
+
 @media screen and (max-width:1024px){
     .box{
         overflow-x: scroll;
