--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -15,7 +15,7 @@
         <div class="box">
           <div class="box-header">
             <div class="row">
-              <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="First Name,Last Name,Phone"></div>
+              <div class="col-sm-6 col-md-4"> Search : <input [(ngModel)]="term" placeholder="First Name,Last Name,Phone" class="searchbox"></div>
             </div>
           </div>
           <!-- /.box-header -->
@@ -58,13 +58,13 @@
                       <td>
                         <!-- Single button -->
                         <div class="btn-group">
-                          <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"
+                          <button type="button" class="btn btn-primary" aria-haspopup="true" aria-expanded="false"
                                   *ngIf="chatMode" (click)="onViewChat(item.id)">
-                            View Chats
+                            <i class="fa fa-eye"></i> View Chats
                           </button>
-                          <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"
+                          <button type="button" class="btn btn-primary" aria-haspopup="true" aria-expanded="false"
                                   *ngIf="!chatMode" (click)="onViewContact(item.id)">
-                            View Contact List
+                            <i class="fa fa-eye"></i> View Contact List
                           </button>
                         </div>
                       </td>
