--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -50,7 +50,8 @@
                     </div>
                   </ng-template>
                   <input type="hidden" [ngModel]="dep.userId" id="admin" name="userId" #selected>
-                  <div class="col-md-5">
+                  <div class="col-md-6">
+                      <div class="depaertArea">
                     <div class="form-group">
                       <label class="control-label" for="agents">
                         Select Agents
@@ -67,12 +68,14 @@
                         </c-badge>
                       </angular2-multiselect>
                     </div>
+                      </div>
+                      <div class="createAgentBtn">
+                          <div class="form-group">
+                              <button class="btn btn-warning btn-mb" type="button" (click)="CreateAgent(template)" id="createAgent"><i class="fa fa-plus"> </i> Create Agent</button>
+                          </div>
+                      </div>
                   </div>
-                  <div class="col-md-1 createAgentBtn">
-                    <div class="form-group">
-                      <button class="btn btn-warning newbutton" type="button" (click)="CreateAgent(template)" id="createAgent"><i class="fa fa-plus"> </i> Create Agent</button>
-                    </div>
-                  </div>
+
                 </div>
               </div>
               <div class="col-md-6">
