--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.css
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.css
@@ -11,27 +11,43 @@
   border-radius: 20px;
   border: 1px solid #3c8dbc;
   box-shadow: 0px 0px 4px 1px #3c8dbc75;
-  width: calc(100% - 60%);
+  width: calc(100% - 55px);
   height: 30px;
   outline: none;
   padding: 16px;
 }
+#departmentListTable tr td:last-child{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .filterbox{
   border-radius: 20px;
   border-color: #ddd;
   padding: 5px 20px;
-  width: calc(100% - 60%);
+  width: calc(100% - 65px);
   outline: none;
 }
 .labelwidth{
   width: 20% ;
 }
+.companyArea{
+  padding: 0 15px 20px 15px;
+}
+
 @media only screen and (max-width: 480px) and (min-width:320px){
   .searchbox {
     /*width: 70%;*/
   }
   .filterbox{
-    margin-bottom: 20px;
     /*width: 70%;*/
   }
+}
+
+#departmentListTable tr td:nth-child(n+2){
+  min-width: 145px;
+}
+
+#departmentListTable tr td:nth-child(n+3){
+  min-width: 170px;
 }
