--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.css
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.css
@@ -4,6 +4,35 @@ a {
 .filter {
   padding-bottom: 10px;
 }
+.companyArea {
+    padding: 0 15px 20px 15px;
+}
+.filterbox {
+    border-radius: 20px;
+    border-color: #ddd;
+    padding: 5px 20px;
+    width: calc(100% - 65px);
+    outline: none;
+}
+.searchbox {
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 1px solid #3c8dbc;
+    box-shadow: 0px 0px 4px 1px #3c8dbc75;
+    width: calc(100% - 55px);
+    height: 30px;
+    outline: none;
+    padding: 16px;
+}
+#example2 tr td:last-child{
+    padding-right: 4px;
+    padding-left: 4px;
+}
+
+#example2 tr td:nth-child(n+2){
+    min-width: 140px;
+}
+
 @media screen and (max-width:520px){
     .box{
       overflow-x: scroll;
