--- a/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.css
@@ -167,6 +167,52 @@ ul.super-sub li:hover{background: #e1e3e9;}
   pointer-events: none;
 }
 
+
+.chat-list1 ul li.active{
+  position: relative;
+}
+.chat-list1 ul li.active:after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-top: 7px solid rgba(0,0,0,0);
+  border-bottom: 7px solid rgba(0,0,0,0);
+  border-right: 7px solid #fff;
+}
+.chat-list2 ul li.active{
+  position: relative;
+}
+.chat-list2 ul li.active:after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-top: 7px solid rgba(0,0,0,0);
+  border-bottom: 7px solid rgba(0,0,0,0);
+  border-right: 7px solid #fff;
+}
+.list2{
+  padding: 0;
+}
+.list2 .chat-list2{
+  padding-left: 0;
+  width: 87%;
+  margin-left: 21px;
+}
+.searchKeyword {
+  margin-bottom: 20px;
+  border-radius: 20px;
+  border: 1px solid #3c8dbc;
+  box-shadow: 0px 0px 4px 1px #3c8dbc75;
+  width: calc(100% - 92px);
+  height: 30px;
+  outline: none;
+  padding: 16px;
+}
+
 @media screen and (max-width:768px){
   .direct-chat-messages {
     height: 300px;
