--- a/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
@@ -9,7 +9,7 @@
           <div class="col-xs-12">
             <div class="row">
               <h2>Messages
-                <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="All keywords" (ngModelChange)="agentFilterKeyUp()"></div>
+                <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="All keywords" (ngModelChange)="agentFilterKeyUp()" class="searchKeyword"></div>
               </h2>
 
             </div>
@@ -17,7 +17,7 @@
             <div class="row" *ngIf="agentList !== undefined && agentList.length">
               <div class="col-md-2 col-sm-2">
                 <div class="row">
-                  <div class="chat-list">
+                  <div class="chat-list chat-list1">
                     <ul>
                       <ng-container
                         *ngFor="let agent of agentList; let i = index;">
@@ -34,9 +34,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-2 col-sm-2">
+              <div class="col-md-2 col-sm-2 list2">
                 <div class="row">
-                  <div class="chat-list">
+                  <div class="chat-list chat-list2">
                     <ul *ngIf="agentList[agentIndex].chat !== undefined">
                       <ng-container
                         *ngFor="let client of agentList[agentIndex]?.chat; let j = index;">
