--- a/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
@@ -100,7 +100,14 @@ h2{
 .direct-chat-messages {
   height: 665px;
 }
-
+.direct-chat-msg.right .direct-chat-text{
+  background: #3c8dbc;
+  border-color: #3c8dbc;
+  color: #ffffff;
+}
+.right .direct-chat-text:after, .right .direct-chat-text:before {
+  border-left-color: #3c8dbc;
+}
 .dropdown-submenu {
   position: relative;
   text-align: center;
@@ -109,6 +116,51 @@ h2{
 }
 .dropdown-submenu:last-child {
   border: none;
+}
+.searchKeyword{
+  margin-bottom: 20px;
+  border-radius: 20px;
+  border: 1px solid #3c8dbc;
+  box-shadow: 0px 0px 4px 1px #3c8dbc75;
+  width: calc(100% - 92px);
+  height: 30px;
+  outline: none;
+  padding: 16px;
+}
+
+.chat-list1 ul li.active{
+  position: relative;
+}
+.chat-list1 ul li.active:after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-top: 7px solid rgba(0,0,0,0);
+  border-bottom: 7px solid rgba(0,0,0,0);
+  border-right: 7px solid #fff;
+}
+.chat-list2 ul li.active{
+  position: relative;
+}
+.chat-list2 ul li.active:after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-top: 7px solid rgba(0,0,0,0);
+  border-bottom: 7px solid rgba(0,0,0,0);
+  border-right: 7px solid #fff;
+}
+.list2{
+  padding: 0;
+}
+.list2 .chat-list2{
+  padding-left: 0;
+  width: 87%;
+  margin-left: 21px;
 }
 
 .chat-btn{
