--- a/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
@@ -128,6 +128,9 @@ h2{
   padding: 16px;
 }
 
+.chat-list1{
+  padding-left: 0;
+}
 .chat-list1 ul li.active{
   position: relative;
 }
@@ -140,6 +143,10 @@ h2{
   border-top: 7px solid rgba(0,0,0,0);
   border-bottom: 7px solid rgba(0,0,0,0);
   border-right: 7px solid #fff;
+}
+.chat-list2 ul li{
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .chat-list2 ul li.active{
   position: relative;
@@ -155,12 +162,11 @@ h2{
   border-right: 7px solid #fff;
 }
 .list2{
-  padding: 0;
+  padding: 0 10px;
 }
 .list2 .chat-list2{
   padding-left: 0;
-  width: 87%;
-  margin-left: 21px;
+  width: 100%;
 }
 
 .chat-btn{
@@ -220,6 +226,40 @@ ul.super-sub li:hover{background: #e1e3e9;}
   pointer-events: none;
 }
 
+.messageHeading{
+  text-align: center;
+  margin-top: -50px;
+}
+.chat-list2 ul li .chat-content h3{
+  margin: 5px 0 0 0;
+  float: left;
+  width: 100%;
+}
+.chat-list2 ul li .chat-content h3 span{
+  display: block;
+  width: 100%;
+  padding-top: 5px;
+}
+
+@media screen and (max-width: 991px){
+  .chat-list2 ul li{
+    padding: 5px;
+  }
+  .chat-list2 ul li .chat-content-area{
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .chat-list2 ul li .chat-content h3{
+    text-align: center;
+  }
+}
+
+@media screen and (max-width:860px){
+  .messageHeading{
+    margin-top: 0;
+  }
+}
+
 @media screen and (max-width:768px){
   .direct-chat-messages {
     height: 300px;
@@ -229,6 +269,14 @@ ul.super-sub li:hover{background: #e1e3e9;}
   }
 }
 
+@media screen and (max-width: 767px){
+  .direct-chat-messages{
+    padding: 0;
+  }
+  .chat-btn{
+    margin: 10px;
+  }
+}
 .docImage {
   height: 200px;
   width: 200px;
