--- a/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.css
@@ -64,6 +64,9 @@ h2{
   font-size: 12px;
   color: #000;
 }
+.chat-list{
+  padding-left: 0;
+}
 .chat-list ul li:hover h3,.chat-list ul li.active h3{
   color: #fff;
 }
@@ -196,12 +199,11 @@ ul.super-sub li:hover{background: #e1e3e9;}
   border-right: 7px solid #fff;
 }
 .list2{
-  padding: 0;
+  padding: 0 10px;
 }
 .list2 .chat-list2{
   padding-left: 0;
-  width: 87%;
-  margin-left: 21px;
+  width: 100%;
 }
 .searchKeyword {
   margin-bottom: 20px;
@@ -213,6 +215,35 @@ ul.super-sub li:hover{background: #e1e3e9;}
   outline: none;
   padding: 16px;
 }
+.chat-list2 ul li{
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.chat-list2 ul li .chat-content h3{
+  margin: 5px 0 0 0;
+  float: left;
+  width: 100%;
+}
+.chat-list2 ul li .chat-content h3 span{
+  display: block;
+  width: 100%;
+  padding-top: 5px;
+}
+
+@media screen and (max-width: 991px){
+  .chat-list2 ul li{
+    padding: 5px;
+  }
+  .chat-list2 ul li .chat-content-area{
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .chat-list2 ul li .chat-content h3{
+    text-align: center;
+  }
+}
+
+
 @media screen and (max-width:768px){
   .direct-chat-messages {
     height: 300px;
