--- a/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.html
@@ -8,14 +8,13 @@
         <div class="box">
           <div class="col-xs-12">
             <div class="row">
-              <h2>Messages
-                <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="All keywords" (ngModelChange)="agentFilterKeyUp()" class="searchKeyword"></div>
+              <h2>
+                <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="Agents" (ngModelChange)="agentFilterKeyUp()" class="searchKeyword"></div>
               </h2>
-
             </div>
 
             <div class="row" *ngIf="agentList !== undefined && agentList.length">
-              <div class="col-md-2 col-sm-2">
+              <div class="col-lg-2 col-md-3 col-sm-3">
                 <div class="row">
                   <div class="chat-list chat-list1">
                     <ul>
@@ -34,8 +33,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-2 col-sm-2 list2">
-                <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-3 list2">
+                <div class="">
                   <div class="chat-list chat-list2">
                     <ul *ngIf="agentList[agentIndex].chat !== undefined">
                       <ng-container
@@ -63,6 +62,9 @@
             </div>
             <div class="row" *ngIf="!rejected">
               <div class="box box-primary">
+                <div class="messageHeading">
+                  <h3>Message</h3>
+                </div>
                 <div class="box-body">
                   <h4>No Rejected Chats at this Moment!</h4>
                 </div>
